# ADRSIR-API

./: .gitignore  README.md  adrsir-api.conf  adrsir-api.service  adrsir-api.socket  gunicorn.conf.py  pyproject.toml
adrsir/: adrsir.py  crud.py  database.py  main-old.py  main.py  models.py  schemas.py
