[tool.poetry]
name = "adrsir-api"
version = "0.1.0"
description = "The api to control ADRSIR which is the universal remote HAT"
authors = ["Takayuki Yano <yanodelta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
SQLAlchemy = "^1.3.23"
pydantic = "^1.8.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
